Support anyhow::Result<Response>

--- a/atcoder-problems-backend/Cargo.toml
+++ b/atcoder-problems-backend/Cargo.toml
@@ -34,6 +34,7 @@ async-trait = "0.1.30"
 
 async-std = { version = "1.6", features = ["attributes"] }
 http-types = "2.1.0"
+anyhow = "1.0.32"
 
 [dev-dependencies]
 rand = "0.7.2"
