--- a/atcoder-problems-backend/sql-client/Cargo.toml
+++ b/atcoder-problems-backend/sql-client/Cargo.toml
@@ -14,3 +14,5 @@ serde = { version = "1.0", features = ["derive"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 anyhow = "1.0.32"
 async-std = { version = "1.6", features = ["attributes"] }
+regex = "1"
+unzip-n = "0.1.2"
