--- a/atcoder-problems-backend/sql-client/Cargo.toml
+++ b/atcoder-problems-backend/sql-client/Cargo.toml
@@ -15,3 +15,4 @@ uuid = { version = "0.8", features = ["serde", "v4"] }
 anyhow = "1.0.32"
 async-std = { version = "1.6", features = ["attributes"] }
 regex = "1"
+futures = "0.3.5"
